<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/feedbackxml"
    tools:context="com.example.creativetechnocollege.com.crtv.creativetechnocollege.Feedback">

    <ScrollView
        android:id="@+id/scrl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingBottom="40dp"
            android:background="@drawable/boarder1">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:contentDescription="TODO"
                android:src="@drawable/logo"
                tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck" />

            <TextView
                android:id="@+id/course_set"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/boarder1"
                android:padding="7dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginLeft="120dp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="110dp"
                android:text="@string/_1_subject_covered_as_prescribed_syllabus"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck"
                android:layout_marginLeft="10dp" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="140dp"
                android:background="@android:drawable/btn_dropdown"
                android:ems="10"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="190dp"
                android:text="@string/_2_the_teacher_covered_relevant_topics_beyond_the_syllabus"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="220dp"
                android:background="@android:drawable/btn_dropdown"
                android:ems="10"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="270dp"
                android:text="@string/_3_the_problem_solving_skill_of_the_teacher"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck"
                android:layout_marginLeft="10dp" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="300dp"
                android:background="@android:drawable/btn_dropdown"
                android:ems="10"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="350dp"
                android:text="@string/_4_assignments_notes_checked_by_the_faculty"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp" />

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="380dp"
                android:background="@android:drawable/btn_dropdown"
                android:ems="10"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="430dp"
                android:text="@string/_5_punctuality_in_taking_the_class"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp" />

            <Spinner
                android:id="@+id/spinner5"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="460dp"
                android:background="@android:drawable/btn_dropdown"
                android:ems="10"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="510dp"
                android:text="@string/_6_how_would_you_rate_your_faculty_s_teaching_style"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner6"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="540dp"
                android:background="@android:drawable/btn_dropdown"
                android:ems="10"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="590dp"
                android:text="@string/_7_effectiveness_of_teacher_in_terms_of_respective_content_technical_non_technical"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner7"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="630dp"
                android:background="@android:drawable/btn_dropdown"
                android:ems="10"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="680dp"
                android:text="@string/_8_effectiveness_of_teacher_in_terms_of_communication_skills"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner8"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="720dp"
                android:background="@android:drawable/btn_dropdown"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="770dp"
                android:text="@string/_9_use_of_projectors_in_the_class"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner9"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="800dp"
                android:background="@android:drawable/btn_dropdown"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="850dp"
                android:text="@string/_10_availability_beyond_normal_classes_and_cooperation_to_solve_individual_problems"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner10"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="890dp"
                android:background="@android:drawable/btn_dropdown"
                android:ems="10"
                android:inputType="number" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="960dp"
                android:layout_marginLeft="10dp"
                android:text="@string/submit"
                android:background="@color/purple_500"
                android:textColor="@color/white"/>

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </FrameLayout>
    </ScrollView>

</FrameLayout>